<resources>
    <string name="app_name">DalPlace</string>
    <string name="app_disclaimer">Copyright © 2022 DalPlace. All Rights Reserved</string>
    <string name="menu_home">Home</string>
    <string name="menu_all_purchases">Purchases</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="my_posts">My Posts</string>
    <string name="support">Support</string>
    <string name="terms_amp_policies"><![CDATA[Terms & Policies]]></string>
    <string name="logout">Logout</string>
    <string name="product">Product</string>
    <string name="add_product">Add Product</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="chat">Chat</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <!--    Strings For Admin side-->
    <string name="admin_home">Home</string>
    <string name="daily_sales">Daily Sales</string>
    <string name="my_profile_admin">My Profile</string>
    <string name="qr_code_scan_admin">Scan QR Code</string>

    <string name="select_a_category">Select a Category</string>
    <string name="enable_chat">Enable Chat</string>
    <string name="urgent_request">Urgent Request</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="verify_transaction">Verify Transaction</string>
    <string name="enter_order_number">Order Number</string>
    <string name="order_number">Order Id:</string>
    <string name="or_text">(OR)</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="deliver_product">Deliver</string>
    <string name="forgotpassword">Forgot Pasword ?</string>
    <string name="registerUserText">Not a user? Click here to register</string>
    <string name="resentlinkmessage">If account exists, then password reset link will sent to this email.</string>
    <string name="alreadyauser">Already a user? Click here</string>
    <string name="razorpay_api_key">rzp_test_yXCWkKGGVyfBKE</string>
    <string name="required">Required</string>
    <string name="loading">Loading</string>
    <string name="category">Category</string>
    <string name="posted_by">Posted By</string>
    <string name="last_updated">Last Updated</string>
    <string name="feedback_title_hint">Title</string>
    <string name="feedback_description_hint">Description</string>
    <string name="feedback_friend_recommend_label">Would you recommend DalPlace to a friend?</string>
    <string name="feedback_friend_recommend_yes">Yes</string>
    <string name="feedback_friend_recommend_no">No</string>
    <string name="feedback_friend_recommend_maybe">Maybe</string>
    <string name="feedback_is_complaint">Is this a complaint?</string>
    <string name="feedback_ratings_label">Ratings</string>
    <string name="feedback_label_btn_submit">Submit feedback</string>
    <string name="products">Products</string>
    <string name="requests">Requests</string>
    <string name="phone_number">Phone Number</string>
    <string name="buy">Buy</string>
    <string name="date_format">dd-MM-yyyy</string>
    <string name="order_confirm_title">Confirm Payment Details</string>
    <string name="btn_pay_now">Pay Now</string>
    <string name="cd_order_image">Order Image</string>
    <string name="item_name_title">Item Name:</string>
    <string name="dummy_email">priyal@gmail.com</string>
    <string name="dummy_price">25 CAD</string>
    <string name="name">Name</string>
    <string name="our_dal_community">Our Dal Community!</string>
    <string name="message">Message</string>
    <string name="time">Time</string>
    <string name="send">Send</string>
    <string name="chat_room">Chat Room</string>
    <string name="feedback">Feedback</string>
    <string name="owner">Owner</string>
    <string name="buyer">Buyer</string>
    <string name="my_requests">My Requests</string>
    <string name="my_products">My Products</string>
    <string name="SellerPhoneNumebr">+918306790082</string>
    <string name="one_signal_app_id">0e4ed0e5-0146-477f-9714-de644edd346b</string>
    <string name="AdminPhoneNumber">+19029832111</string>
    <string name="AdminEmailID">pr327862@dal.ca</string>
    <string name="provide_feedback">Provide Feedback</string>
    <string name="reset_password">Reset Password</string>
    <string name="complaint">Complaint</string>
    <string name="feedbacks">Feedbacks</string>
</resources>