<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProductDetailsFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/add_product"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- IMAGE STARTS -->
            <ImageView
                android:id="@+id/ivProductImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@android:drawable/ic_menu_gallery" />

            <!-- IMAGE ENDS -->
            <!-- INPUT FIELDS START -->

            <TextView
                android:id="@+id/tvLastUpdated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:fontFamily="@font/public_sans_light_italic"
                android:gravity="end"
                android:paddingHorizontal="@dimen/padding_normal"
                android:text="@string/last_updated"
                android:textSize="@dimen/tv_caption" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:fontFamily="@font/public_sans_bold"
                android:paddingHorizontal="@dimen/padding_normal"
                android:text="@string/title"
                android:textSize="@dimen/tv_title" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:fontFamily="@font/public_sans_medium"
                android:paddingHorizontal="@dimen/padding_normal"
                android:text="@string/price"
                android:textSize="@dimen/tv_subtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:fontFamily="@font/public_sans"
                android:paddingHorizontal="@dimen/padding_normal"
                android:text="@string/category"
                android:textSize="@dimen/tv_body1" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:fontFamily="@font/public_sans"
                android:paddingHorizontal="@dimen/padding_normal"
                android:text="@string/description"
                android:textSize="@dimen/tv_body1" />

            <TextView
                android:id="@+id/tvOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:fontFamily="@font/public_sans_medium"
                android:gravity="end"
                android:paddingHorizontal="@dimen/padding_normal"
                android:text="@string/owner"
                android:textSize="@dimen/tv_subtitle" />

            <!-- BUTTONS START -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBuy"
                    style="@style/BtnSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_separator"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:text="@string/buy"
                    tools:ignore="NestedWeights" />

                <Button
                    android:id="@+id/btnChat"
                    style="@style/BtnPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_separator"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:text="@string/chat" />

                <Button
                    android:id="@+id/btnDelete"
                    style="@style/BtnCustom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_separator"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/delete"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnEdit"
                    style="@style/BtnPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_separator"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:text="@string/edit"
                    android:visibility="gone" />

            </LinearLayout>
            <!-- BUTTONS END -->

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>