<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="com.example.dalplace.fragments.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_addEditProduct"
            app:destination="@id/addEditProductFragment" />
        <action
            android:id="@+id/action_home_to_productDetails"
            app:destination="@id/productDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/fragment_more"
        android:name="com.example.dalplace.fragments.MoreFragment"
        android:label="@string/menu_more"
        tools:layout="@layout/fragment_more">
        <action
            android:id="@+id/action_fragment_more_to_myProfileFragment"
            app:destination="@id/myProfileFragment" />
        <action
            android:id="@+id/action_fragment_more_to_feedbackFragment"
            app:destination="@id/feedbackFragment" />
    </fragment>
    <fragment
        android:id="@+id/fragment_chats"
        android:name="com.example.dalplace.fragments.ChatListFragment"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_chat_list">
        <action
            android:id="@+id/action_chats_to_chatRoom"
            app:destination="@id/chatRoomFragment" />
    </fragment>
    <fragment
        android:id="@+id/fragment_all_purchases"
        android:name="com.example.dalplace.fragments.AllPurchasesFragment"
        android:label="@string/menu_all_purchases"
        tools:layout="@layout/fragment_all_purchases" />
    <fragment
        android:id="@+id/addEditProductFragment"
        android:name="com.example.dalplace.fragments.AddEditProductFragment"
        android:label="@string/product"
        tools:layout="@layout/fragment_add_edit_product">
        <argument
            android:name="isNew"
            android:defaultValue="true"
            app:argType="boolean" />
        <argument
            android:name="selectedProduct"
            android:defaultValue="@null"
            app:argType="com.example.dalplace.model.Product"
            app:nullable="true" />

    </fragment>
    <fragment
        android:id="@+id/myProfileFragment"
        android:name="com.example.dalplace.fragments.MyProfileFragment"
        android:label="My Profile"
        tools:layout="@layout/fragment_my_profile" />
    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.example.dalplace.fragments.ProductDetailsFragment"
        android:label="Product Details"
        tools:layout="@layout/fragment_product_details">
        <argument
            android:name="selectedProduct"
            android:defaultValue="@null"
            app:argType="com.example.dalplace.model.Product"
            app:nullable="true" />
        <action
            android:id="@+id/action_productDetails_to_addEditProduct"
            app:destination="@id/addEditProductFragment" />
        <action
            android:id="@+id/action_productDetails_to_chatRoom"
            app:destination="@id/chatRoomFragment" />
    </fragment>
    <fragment
        android:id="@+id/feedbackFragment"
        android:name="com.example.dalplace.fragments.FeedbackFragment"
        android:label="@string/feedback"
        tools:layout="@layout/fragment_feedback">
        <action
            android:id="@+id/action_feedbackFragment_to_fragment_home"
            app:destination="@id/fragment_home" />
    </fragment>
    <fragment
        android:id="@+id/chatRoomFragment"
        android:name="com.example.dalplace.fragments.ChatRoomFragment"
        android:label="@string/chat_room"
        tools:layout="@layout/fragment_chat_room">
        <argument
            android:name="chatRoom"
            android:defaultValue="@null"
            app:argType="com.example.dalplace.model.ChatRoom"
            app:nullable="true" />
    </fragment>
</navigation>
