<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FeedbackFragment">

    <ScrollView
        android:id="@+id/scrollViewFeedback"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/add_product"
        android:fillViewport="true"
        android:padding="@dimen/padding_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/labelFeedbackTitle"
                style="@style/TilCustom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/feedback_title_hint"
                app:helperText="@string/required"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/feedbackTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:inputType="textCapWords"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvLabelRecommendation"
                style="@style/TilCustom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/feedback_friend_recommend_label"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelFeedbackTitle" />

            <RadioGroup
                android:id="@+id/rgWillRecommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelRecommendation">

                <RadioButton
                    android:id="@+id/feedbackRecommendYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_friend_recommend_yes" />

                <RadioButton
                    android:id="@+id/feedbackRecommendNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_friend_recommend_no" />

                <RadioButton
                    android:id="@+id/feedbackRecommendMaybe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_friend_recommend_maybe" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/cbIsComplaint"
                style="@style/SpCustom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/feedback_is_complaint"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rgWillRecommend" />

            <TextView
                android:id="@+id/tvLabelRatings"
                style="@style/TilCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/feedback_ratings_label"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cbIsComplaint" />

            <RatingBar
                android:id="@+id/ratingBarFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="1"
                android:stepSize="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvLabelRatings"
                app:layout_constraintTop_toBottomOf="@+id/cbIsComplaint" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/labelFeedbackDescription"
                style="@style/TilCustom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/feedback_description_hint"
                app:helperText="@string/required"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBarFeedback">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/feedbackDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:minHeight="48dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnSubmitFeedback"
                style="@style/BtnPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/feedback_label_btn_submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelFeedbackDescription" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>